# pingpongbot

./: README.md  i2c.cpp  i2c.hpp  i2ctest2  i2ctest2.cpp
i2ctests/: i2ctest  i2ctest.cpp
imu_test/: imu_test  imu_test.cpp
pingpongbot/: CMakeLists.txt  package.xml
pingpongbot_bringup/: CMakeLists.txt  README.md  package.xml
pingpongbot_bringup/launch/: bringup.launch.xml  pingpongbot_bringup.launch.xml
pingpongbot_control/: CMakeLists.txt  README.md  package.xml  pingpongbot_contol.launch.xml
pingpongbot_control/config/: commander.yaml  controller.yaml  ekf.yaml  imu_filter_config.yaml  robot_dimensions.yaml
pingpongbot_control/include/pingpongbot_control/: kinematics.hpp
pingpongbot_control/launch/: control.launch.xml  pingpongbot_control.launch.xml
pingpongbot_control/src/: commander.cpp  controller.cpp  jointStateUpdate.cpp  kinematics.cpp  odomUpdate.cpp
pingpongbot_description/: CMakeLists.txt  README.md  package.xml
pingpongbot_description/config/: basic_config.rviz  config.rviz  params.yaml
pingpongbot_description/launch/: view_robot.launch.xml
pingpongbot_description/meshes/: chassis.stl  omniwheel.stl  paddle.stl
pingpongbot_description/urdf/: pingpongbot.urdf.xacro
pingpongbot_driver/: CMakeLists.txt  README.md  package.xml
pingpongbot_driver/include/pingpongbot_driver/: driver.hpp  i2c.hpp  interface.hpp
pingpongbot_driver/launch/: driver.launch.xml  pingpongbot_driver.launch.xml
pingpongbot_driver/src/: driver.cpp  i2c.cpp  interface.cpp  pingpongbot_driver.cpp
pingpongbot_msgs/: CMakeLists.txt  README.md  package.xml
pingpongbot_msgs/msg/: Error.msg  IMU.msg  WheelAngles.msg  WheelSpeeds.msg
pingpongbot_vision/: CMakeLists.txt  README.md  package.xml
pingpongbot_vision/config/: arena.yaml  tags.yaml
pingpongbot_vision/launch/: vision.launch.xml
pingpongbot_vision/src/: apriltagHandler.cpp  arena.cpp  tracker.cpp
pingpongbotlib/: CMakeLists.txt  i2ctest.cpp  package.xml
pingpongbotlib/csv/: counts1_10.csv  counts1_20.csv  counts1_30.csv  counts1_40.csv  counts1_50.csv  counts1_60.csv  counts1_70.csv  counts1_80.csv  counts1_90.csv  counts2_10.csv  counts2_20.csv  counts2_30.csv  counts2_40.csv  counts2_50.csv  counts2_60.csv  counts2_70.csv  counts2_80.csv  counts2_90.csv  counts3_10.csv  counts3_20.csv  counts3_30.csv  counts3_40.csv  counts3_50.csv  counts3_60.csv  counts3_70.csv  counts3_80.csv  counts3_90.csv  times_10.csv  times_20.csv  times_30.csv  times_40.csv  times_50.csv  times_60.csv  times_70.csv  times_80.csv  times_90.csv
pingpongbotlib/include/pingpongbotlib/: driver.hpp  i2c.hpp  kinematics.hpp
pingpongbotlib/src/: driver.cpp  i2c.cpp  i2ctest.cpp  kinematics.cpp
